--- a/package.json
+++ b/package.json
@@ -7,16 +7,32 @@
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "migrate": "npx prisma migrate dev",
+    "migrate:deploy": "npx prisma migrate deploy",
+    "migrate:reset": "npx prisma migrate reset",
+    "migrate:push": "npx prisma db push",
+    "routes:gen": "routes-gen -d @routes-gen/remix",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^6.3.1",
     "@remix-run/node": "^2.15.3",
     "@remix-run/react": "^2.15.3",
     "@remix-run/serve": "^2.15.3",
+    "@routes-gen/remix": "^0.3.7",
+    "bcryptjs": "^3.0.0",
+    "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.10.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.2",
+    "remix-auth": "^4.1.0",
+    "remix-auth-form": "^3.0.0",
+    "routes-gen": "^0.6.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.3",
@@ -32,6 +48,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
+    "prettier": "3.5.1",
+    "prisma": "^6.3.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
