--- a/package.json
+++ b/package.json
@@ -16,44 +16,55 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "@prisma/client": "^6.3.1",
-    "@remix-run/node": "^2.15.3",
-    "@remix-run/react": "^2.15.3",
+    "@remix-run/node": "^2.16.0",
+    "@remix-run/react": "^2.16.0",
     "@remix-run/serve": "^2.15.3",
     "@remix-validated-form/with-zod": "^2.0.7",
     "@routes-gen/remix": "^0.3.7",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.9",
+    "@types/lodash": "^4.17.16",
     "bcryptjs": "^3.0.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
+    "intl-parse-accept-language": "^1.0.0",
+    "is-ip": "^5.0.1",
     "isbot": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0",
     "remix-auth": "^4.1.0",
     "remix-auth-form": "^3.0.0",
+    "remix-utils": "^8.1.0",
     "remix-validated-form": "^5.1.5",
     "routes-gen": "^0.6.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.15.3",
+    "@remix-run/dev": "^2.16.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.5.3",
     "prettier": "3.5.1",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
