--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^3.0.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
     "intl-parse-accept-language": "^1.0.0",
@@ -46,7 +47,8 @@
     "remix-utils": "^8.1.0",
     "remix-validated-form": "^5.1.5",
     "routes-gen": "^0.6.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-form-data": "^2.0.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.0",
