Added 0Auth authorization and jwt tokens

--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "@routes-gen/remix": "^0.3.7",
     "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/vite": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
     "bcryptjs": "^3.0.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
     "intl-parse-accept-language": "^1.0.0",
     "is-ip": "^5.0.1",
     "isbot": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -44,6 +47,7 @@
     "react-router-dom": "^7.2.0",
     "remix-auth": "^4.1.0",
     "remix-auth-form": "^3.0.0",
+    "remix-auth-oauth2": "^3.4.0",
     "remix-utils": "^8.1.0",
     "remix-validated-form": "^5.1.5",
     "routes-gen": "^0.6.1",
